--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!--Firebase references-->
     <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase.js"></script>
-  <!--<script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"><script>>
+    <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
     <!--Moment.js references-->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <!--jquery reference-->
